cmake_minimum_required(VERSION 2.8)

#~ project(lmkslam)
add_subdirectory(srosbag)
#~ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#~ set(CORE_DIR ~/workspace/sros/)
#~ set(SOURCE_FILES intensityLmk.cpp intensityLmk.h)
#~ include_directories(${CORE_DIR})
#~ add_library(lkmslam intensityLmk.cpp intensityLmk.h)
